Name:           preface-r0ml
Version:        0.2
Cabal-Version:  >= 1.22
Description:    An extended Prelude
License:        PublicDomain
Author:         Sherlock Holmes
Category:       Prelude
Maintainer:     me@r0ml.net
Synopsis:       Utility functions for simplifying common problems
Build-Type:     Simple
Source-Repository head
  Type:           git
  Location:       git://github.com/r0ml/preface.git

Library
  Build-Depends: base >=4 && < 5
                 , array, bytestring, containers
                 , directory, filepath
                 , template-haskell
                 , time, unix
                 , network, process
                 , random
                 , text
                 , stm
                 -- for building introspection and testing modules
                 , Cabal, QuickCheck
                 
                 , ghc
                 -- , deepseq, ghc, haskeline, hpc, integer-gmp, pretty, terminfo, transformers, vector

  Exposed-modules: Preface.R0ml
  Other-Modules: Preface.Stringy, Preface.Byter, Preface.Misc, Preface.Math
            , Preface.Symbols, Preface.SecureHash, Preface.SCGI
            , Preface.Str, Preface.StrUtils, Preface.Binary, Preface.Arrayed
            , Preface.Timings
            , Preface.Xml, Preface.JSONic
            , Bindings.Curl, Bindings.CurlX
            , Bindings.Posix, Bindings.Util
            , Bindings.Vfs, Bindings.KQueue, Bindings.Msg, Bindings.Syslog
  Extra-Libraries: curl
  Hs-Source-Dirs: .
  Ghc-options: -Wall
  Default-Language: Haskell2010

Test-Suite testXml
  type: detailed-0.9
  Default-Language: Haskell2010
  Build-Depends: base, Cabal, preface-r0ml
  hs-source-dirs: test
  Ghc-options: -Wall -static
  Test-Module: TestXml

Test-Suite testJson
  type: detailed-0.9
  Default-Language: Haskell2010
  Build-Depends: base, Cabal, preface-r0ml, QuickCheck, bytestring, text, time, containers
  hs-source-dirs: test
  Ghc-options: -Wall -static
  test-module: TestJson

Test-Suite testStr
  -- type: detailed-0.9
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  build-depends: base, preface-r0ml
  Ghc-options: -Wall -static
  hs-source-dirs: test
  -- Test-Module: TestQQ
  main-is: TestQQ.hs

Test-Suite testPosix
  -- type: detailed-0.9
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  build-depends: base, preface-r0ml, unix
  Ghc-options: -Wall
  hs-source-dirs: test
  -- Test-Module: TestQQ
  main-is: TestPosix2.hs

Executable badTest
  Default-Language: Haskell2010
  Build-Depends: base, preface-r0ml
  hs-source-dirs: test
  Ghc-options: -Wall 
  Main-is: BadTest.hs

