Name:           preface-r0ml
Version:        0.2
Cabal-Version:  >= 1.22
Description:    An extended Prelude
License:        PublicDomain
Author:         Sherlock Holmes
Category:       Prelude
Maintainer:     me@r0ml.net
Synopsis:       Utility functions for simplifying common problems
Build-Type:     Simple
Source-Repository head
  Type:           git
  Location:       git://github.com/r0ml/preface.git

Library
  Build-Depends: base >=4 && < 5
                 , array, bytestring, containers
                 , binary
                 , deepseq
                 , directory, filepath
                 , template-haskell
                 , time, unix
                 , network, process
                 , random
                 , text
                 , stm
                 -- for building introspection and testing modules
                 , Cabal, QuickCheck
                 
                 , async
                 , ghc
                 -- haskeline, hpc, integer-gmp, pretty, terminfo, transformers, vector

  Exposed-modules: Preface.R0ml
  Other-Modules: Preface.Stringy, Preface.Byter, Preface.Misc, Preface.Math
            , Preface.Symbols, Preface.SecureHash, Preface.Runner
            , Preface.SCGI, Preface.WebSocket
            , Preface.Testing
            , Preface.QuasiQuotes, Preface.FFITemplates, Preface.FFITemplates2
            , Preface.FFITemplates3
            , Preface.IOQuotes
            , Preface.StrUtils, Preface.Binary, Preface.Arrayed
            , Preface.Timings, Preface.Imports, Preface.Pipes
            , Preface.Xml, Preface.JSONic, Preface.IO
            , Preface.Typing, Preface.Diff, Preface.Console
            , Preface.ASN1
            , Bindings.Curl, Bindings.Curl.CurlX
            , Bindings.Curl.CurlErrors, Bindings.Curl.CurlInfo, Bindings.Curl.CurlOptions
            , Bindings.Curl.CurlSSL, Bindings.Curl.CurlPost
            , Bindings.Posix, Bindings.Util
            , Bindings.Vfs
            , Bindings.Msg, Bindings.Syslog
            , Bindings.Zlib
  Extra-Libraries: curl z
  Default-Extensions: NoImplicitPrelude
  Hs-Source-Dirs: .
-- IF THE -lcurl IS MISSING, HADDOCK FAILS
  Ghc-options: -Wall 
-- -lcurl -lz
  Default-Language: Haskell2010

-- Test-Suite testXml
-- type: detailed-0.9
--  Default-Language: Haskell2010
--  Build-Depends: base, Cabal, preface-r0ml
--  hs-source-dirs: test
--  Ghc-options: -Wall -static
--  Test-Module: TestXml

--Test-Suite testJson
--  type: detailed-0.9
--  Default-Language: Haskell2010
--  Build-Depends: base, Cabal, preface-r0ml, QuickCheck, bytestring, text, time, containers
--  hs-source-dirs: test
--  Ghc-options: -Wall -static
--  test-module: TestJson

Test-Suite testStr
  -- type: detailed-0.9
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  build-depends: preface-r0ml
  default-extensions: NoImplicitPrelude
  Ghc-options: -Wall -static
  hs-source-dirs: test
  -- Test-Module: TestQQ
  main-is: TestQQ.hs

Test-Suite testPosix
  -- type: detailed-0.9
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  build-depends: preface-r0ml, unix
  default-extensions: NoImplicitPrelude
  Ghc-options: -Wall
  hs-source-dirs: test
  -- Test-Module: TestQQ
  main-is: TestPosix2.hs

Test-Suite testASN1
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  build-depends: preface-r0ml, bytestring, QuickCheck, time, base
  default-extensions: NoImplicitPrelude
  GHC-Options: -Wall
  hs-source-dirs: test
  main-is: TestASN1.hs

Executable md5Test
  Default-Language: Haskell2010
  build-depends: preface-r0ml
  default-extensions: NoImplicitPrelude
  Ghc-options: -Wall -threaded
  hs-source-dirs: test
  main-is: MD5Test.hs
  
-- Executable testProcess
--   -- type: exitcode-stdio-1.0
--   Default-Language: Haskell2010
--   build-depends: preface-r0ml
--   default-extensions: NoImplicitPrelude
--   Ghc-options: -Wall -threaded
--   hs-source-dirs: test
--   main-is: TestProcess.hs

Executable badTest
  Default-Language: Haskell2010
  Build-Depends: preface-r0ml
  default-extensions: NoImplicitPrelude
  hs-source-dirs: test
  Ghc-options: -Wall 
  Main-is: BadTest.hs

Executable zlibTest
  Default-Language: Haskell2010
  default-extensions: NoImplicitPrelude
  Build-Depends: preface-r0ml
                 -- , bytestring, stm, network, random, unix, process, directory
                 -- , time, template-haskell, filepath, containers, text
  hs-source-dirs: test
  extra-libraries: z
  Ghc-options: -debug -g -Wall -ddump-splices -threaded
  Main-is: ZlibTest.hs

Executable wsClient
  Default-Language: Haskell2010
  default-extensions: NoImplicitPrelude
  Build-Depends: preface-r0ml
  hs-source-dirs: test
  Ghc-Options: -Wall -threaded
  Main-is: WSClient.hs
  
