Name:           preface
Version:        0.1
Cabal-Version:  >= 1.18
Description:    An extended Prelude
License:        PublicDomain
Author:         Sherlock Holmes
Category:       Prelude
Maintainer:     me@r0ml.net
Synopsis:       Utility functions for simplifying common problems
Build-Type:     Simple
Source-Repository head
  Type:           git
  Location:       git://github.com/r0ml/preface.git

Library
  Build-Depends: base >=4 && < 5,
                 text, mtl, process, time, directory, filepath,
                 network, bytestring, network-uri,
                 old-locale, binary, containers
-- , mime-types
  Exposed-modules: Preface
  Other-Modules: Stringy
  Hs-Source-Dirs: .
  Ghc-options: -Wall
  Default-Language: Haskell2010

