Name:           preface
Version:        0.1
Cabal-Version:  >= 1.18
Description:    An extended Prelude
License:        PublicDomain
Author:         Sherlock Holmes
Category:       Prelude
Maintainer:     me@r0ml.net
Synopsis:       Utility functions for simplifying common problems
Build-Type:     Simple
Source-Repository head
  Type:           git
  Location:       git://github.com/r0ml/preface.git

Library
  Build-Depends: base >=4 && < 5,
                 text,
                 process, time, directory, filepath, array,
                 network, bytestring,
                 random,
                 binary,
                 containers,
                 vector
  Exposed-modules: Preface
  Other-Modules: Stringy, Byter, Misc
  Hs-Source-Dirs: .
  Ghc-options: -Wall
  Default-Language: Haskell2010

