Name:           preface
Version:        0.3
Cabal-Version:  >= 1.22
Description:    An extended Prelude
License:        PublicDomain
Author:         Sherlock Holmes
Category:       Prelude
Maintainer:     me@r0ml.net
Synopsis:       Utility functions for simplifying common problems
Build-Type:     Simple
Source-Repository head
  Type:           git
  Location:       git://github.com/r0ml/preface.git

Library
  Build-Depends: base >=4 && < 5
                 , array, bytestring, containers
                 , binary
                 , deepseq
                 , directory, filepath
                 , template-haskell
                 , time, unix
                 , network, process
                 , random
                 , text
                 , stm
                 -- for building introspection and testing modules
                 , Cabal, QuickCheck
                 
                 , async
                 , ghc
                 -- haskeline, hpc, integer-gmp, pretty, terminfo, transformers, vector

  Exposed-modules: Preface

  Other-Modules: Preface.Stringy, Preface.Byter, Preface.Misc
            , Preface.ParseUtils, Preface.Math
            , Preface.Symbols, Preface.SecureHash, Preface.Runner
            , Preface.SCGI, Preface.WebSocket
            , Preface.Testing
            , Preface.QuasiQuotes, Preface.FFITemplates
            , Preface.IOQuotes
            , Preface.StrUtils, Preface.Binary, Preface.Arrayed
            , Preface.Timings, Preface.Imports, Preface.Pipes
            , Preface.Xml, Preface.JSONic, Preface.IO
            , Preface.Typing, Preface.Diff, Preface.Console
            , Preface.ASN1, Preface.Tar, Preface.HTTP, Preface.Distributed
            , Preface.Watch
            , Preface.Sequential
            , Preface.HFlags
            , Bindings.CoreFoundation
            , Bindings.Objc
            , Bindings.Darwin
            , Bindings.Curl, Bindings.Curl.CurlX
            , Bindings.Curl.CurlErrors, Bindings.Curl.CurlInfo, Bindings.Curl.CurlOptions
            , Bindings.Curl.CurlSSL, Bindings.Curl.CurlPost
            , Bindings.Posix
            , Bindings.Python
            , Bindings.TLS
            , Bindings.Vfs
            , Bindings.Msg, Bindings.Syslog
            , Bindings.SQLite3, Bindings.SQLite3.Direct, Bindings.SQLite3.Types
            , Bindings.SQLite3.Bindings
            , Bindings.Zlib


  -- this fails with pkgconfig because --modversion can't parse the openssl version
  Extra-Libraries: ssl crypto sqlite3
  Extra-Lib-Dirs: /Volumes/Storage/usr-local/Cellar/openssl/1.0.2d_1/lib

  -- Extra-Libraries: python2.7
  -- Extra-Lib-Dirs: /System/Library/Frameworks/Python.framework/Versions/2.7/lib

  Include-Dirs: /Applications/Xcode.app/Contents/Developer/Platforms/MacOSX.platform/Developer/SDKs/MacOSX10.11.sdk/usr/include

  Default-Extensions: NoImplicitPrelude
  Hs-Source-Dirs: .
-- IF THE -lcurl IS MISSING, HADDOCK FAILS
  Ghc-options: -Wall 
  -- -static
  PkgConfig-Depends: python
  PkgConfig-Depends: libcurl
  PkgConfig-Depends: zlib
  -- PkgConfig-Depends: openssl >= 1.0.2
  Default-Language: Haskell2010

-- Test-Suite testXml
-- type: detailed-0.9
--  Default-Language: Haskell2010
--  Build-Depends: base, Cabal, preface
--  hs-source-dirs: test
--  Ghc-options: -Wall -static
--  Test-Module: TestXml

--Test-Suite testJson
--  type: detailed-0.9
--  Default-Language: Haskell2010
--  Build-Depends: base, Cabal, preface, QuickCheck, bytestring, text, time, containers
--  hs-source-dirs: test
--  Ghc-options: -Wall -static
--  test-module: TestJson

Test-Suite testStr
  -- type: detailed-0.9
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  build-depends: preface
  default-extensions: NoImplicitPrelude
  Ghc-options: -Wall -static
  hs-source-dirs: test
  -- Test-Module: TestQQ
  main-is: TestQQ.hs

Test-Suite testPosix
  -- type: detailed-0.9
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  build-depends: preface, unix
  default-extensions: NoImplicitPrelude
  Ghc-options: -Wall
  hs-source-dirs: test
  -- Test-Module: TestQQ
  main-is: TestPosix2.hs

Test-Suite testASN1
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  build-depends: preface, bytestring, QuickCheck, time, base
  default-extensions: NoImplicitPrelude
  GHC-Options: -Wall
  hs-source-dirs: test
  main-is: TestASN1.hs

Executable md5Test
  Default-Language: Haskell2010
  build-depends: preface
  default-extensions: NoImplicitPrelude
  Ghc-options: -Wall -threaded
  hs-source-dirs: test
  main-is: MD5Test.hs
  
-- Executable testProcess
--   -- type: exitcode-stdio-1.0
--   Default-Language: Haskell2010
--   build-depends: preface
--   default-extensions: NoImplicitPrelude
--   Ghc-options: -Wall -threaded
--   hs-source-dirs: test
--   main-is: TestProcess.hs

Executable badTest
  Default-Language: Haskell2010
  Build-Depends: preface
  default-extensions: NoImplicitPrelude
  hs-source-dirs: test
  Ghc-options: -Wall 
  Main-is: BadTest.hs

Executable zlibTest
  Default-Language: Haskell2010
  default-extensions: NoImplicitPrelude
  Build-Depends: preface
  hs-source-dirs: test
  extra-libraries: z
  Ghc-options: -debug -g -Wall -ddump-splices -threaded
  Main-is: ZlibTest.hs

Executable tarTest
  Default-Language: Haskell2010
  default-extensions: NoImplicitPrelude
  Build-Depends: preface
  hs-source-dirs: test
  Ghc-options: -debug -g -Wall -threaded
  Main-is: TarTest.hs

Executable wsClient
  Default-Language: Haskell2010
  default-extensions: NoImplicitPrelude
  Build-Depends: preface
  hs-source-dirs: test
  Ghc-Options: -Wall -threaded
  Main-is: WSClient.hs

Executable tlsTest
  Default-Language: Haskell2010
  default-extensions: NoImplicitPrelude
  Build-depends: preface
  hs-source-dirs: test
  Ghc-Options: -Wall -threaded
  Main-is: TlsTest.hs
  
Executable testPython
  Default-Language: Haskell2010
  default-extensions: NoImplicitPrelude
  Build-depends: preface
  hs-source-dirs: test
  Ghc-Options: -Wall -threaded
  Main-is: TestPython.hs

Executable testWatch
  Default-Language: Haskell2010
  default-extensions: NoImplicitPrelude
  Build-depends: preface
  hs-source-dirs: test
  Ghc-Options: -Wall -threaded 
  Main-is: TestWatch.hs

Test-Suite testSqlite
  type: exitcode-stdio-1.0
  Default-Language: Haskell2010
  default-extensions: NoImplicitPrelude
  Build-depends: preface, text, base, bytestring, HUnit
  hs-source-dirs: test
  Ghc-Options: -Wall -threaded 
  Main-is: TestSQLite3.hs


